cfn_benchmark/cfn_templates/aws-samples__sample-fraud-detection-on-aws/insurance-fraud/graph-based-detection/auto-insurance-fraud-detection/infrastructure/stacks/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Security groups for Auto Insurance Fraud Detection'

Parameters:
  VpcId:
    Type: String

  S3PrefixListId:
    Type: String

Resources:
  # Create security groups without cross-references first
  NeptuneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Neptune cluster
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Neptune-SG'

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Lambda functions
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Lambda-SG'

  BatchSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Batch compute
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Batch-SG'

  VPCEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for VPC endpoints
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPCEndpoint-SG'

  # Now add ingress/egress rules that reference other security groups
  NeptuneIngressFromLambda:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref NeptuneSecurityGroup
      IpProtocol: tcp
      FromPort: 8182
      ToPort: 8182
      SourceSecurityGroupId: !Ref LambdaSecurityGroup
      Description: Allow Lambda functions to access Neptune on port 8182

  NeptuneIngressFromBatch:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref NeptuneSecurityGroup
      IpProtocol: tcp
      FromPort: 8182
      ToPort: 8182
      SourceSecurityGroupId: !Ref BatchSecurityGroup
      Description: Allow Batch jobs to access Neptune for data export

  NeptuneSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref NeptuneSecurityGroup
      IpProtocol: tcp
      FromPort: 8182
      ToPort: 8182
      SourceSecurityGroupId: !Ref NeptuneSecurityGroup
      Description: Allow Neptune cluster nodes to communicate with each other

  NeptuneEgressToS3:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref NeptuneSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationPrefixListId: !Ref S3PrefixListId
      Description: Allow Neptune to access S3 for ML data export

  NeptuneEgressToVPCEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref NeptuneSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref VPCEndpointSecurityGroup
      Description: Allow Neptune to access AWS services via VPC endpoints

  NeptuneSelfEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref NeptuneSecurityGroup
      IpProtocol: tcp
      FromPort: 8182
      ToPort: 8182
      DestinationSecurityGroupId: !Ref NeptuneSecurityGroup
      Description: Allow Neptune cluster nodes to communicate with each other

  LambdaEgressToNeptune:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 8182
      ToPort: 8182
      DestinationSecurityGroupId: !Ref NeptuneSecurityGroup
      Description: Allow Lambda to query Neptune database

  LambdaEgressToVPCEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref VPCEndpointSecurityGroup
      Description: Allow Lambda to access AWS services via VPC endpoints

  LambdaEgressToS3:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationPrefixListId: !Ref S3PrefixListId
      Description: Allow Lambda to access S3 buckets

  BatchEgressToNeptune:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref BatchSecurityGroup
      IpProtocol: tcp
      FromPort: 8182
      ToPort: 8182
      DestinationSecurityGroupId: !Ref NeptuneSecurityGroup
      Description: Allow Batch jobs to export data from Neptune

  BatchEgressToVPCEndpoint:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref BatchSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationSecurityGroupId: !Ref VPCEndpointSecurityGroup
      Description: Allow Batch to access AWS services via VPC endpoints

  BatchEgressToS3:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref BatchSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      DestinationPrefixListId: !Ref S3PrefixListId
      Description: Allow Batch to write exported data to S3

  # Batch needs internet access to pull public container images
  BatchEgressToInternet:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref BatchSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0
      Description: Allow Batch to pull container images from public registries over HTTPS

  VPCEndpointIngressFromNeptune:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPCEndpointSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref NeptuneSecurityGroup
      Description: Allow Neptune to access AWS services via VPC endpoints

  VPCEndpointIngressFromLambda:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPCEndpointSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref LambdaSecurityGroup
      Description: Allow Lambda to access AWS services via VPC endpoints

  VPCEndpointIngressFromBatch:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref VPCEndpointSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !Ref BatchSecurityGroup
      Description: Allow Batch to access AWS services via VPC endpoints

Outputs:
  NeptuneSecurityGroup:
    Value: !Ref NeptuneSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-NeptuneSecurityGroup'

  LambdaSecurityGroup:
    Value: !Ref LambdaSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-LambdaSecurityGroup'

  BatchSecurityGroup:
    Value: !Ref BatchSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-BatchSecurityGroup'

  VPCEndpointSecurityGroup:
    Value: !Ref VPCEndpointSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-VPCEndpointSecurityGroup'
